src/test/ui/tuple/tuple-struct-fields/test3.stderr
error: expected one of `)` or `,`, found `(`
  --> $DIR/test3.rs:5:27
   |
LL |         struct S3(pub($t) ());
   |                           ^ expected one of `)` or `,` here
...
LL |     define_struct! { foo }
   |     ---------------------- in this macro invocation

error: aborting due to previous error

